# MS-in-IOT-UMass-Amherest

00-Orientation/: b.02 - English Lesson - Lesson 02 Student Slides English.pptx
01-Foundation-of-Computer-Engineering/Assignments/: README.md
01-Foundation-of-Computer-Engineering/Assignments/01-Boolean-Switch-Functions/: 01-Boolean-Switching-Functions.md
01-Foundation-of-Computer-Engineering/Assignments/02-Boolean-Switch-Functions-Continued/: 02-Boolean-Switching-Functions-Cont.md
01-Foundation-of-Computer-Engineering/Assignments/03-Finite-State-Machines/: 03-Finite-State-Machines.md
01-Foundation-of-Computer-Engineering/Assignments/04-Verilog/: README.md
01-Foundation-of-Computer-Engineering/Assignments/05-CPP/: README.md
01-Foundation-of-Computer-Engineering/Assignments/06-MIPS/: README.md
01-Foundation-of-Computer-Engineering/Projects/01-FSM-in-Verilog/: README.md
01-Foundation-of-Computer-Engineering/Projects/01-FSM-in-Verilog/design/: lift_controller.v
01-Foundation-of-Computer-Engineering/Projects/02-C++-Programming/: CMakeLists.txt  README.md  main.cpp  rng.cpp  rng.hpp  sorting.cpp  sorting.hpp
02-Computer-Networking/Assignments/: README.md
02-Computer-Networking/Assignments/01-Introduction/: 01-Introduction.md
02-Computer-Networking/Assignments/03-Transport-Layer/: 03-Transport-Layer.md
02-Computer-Networking/Assignments/04-Internet-Layer--Data-Plane/: 04-Internet-Layer--Data-Plane.md
02-Computer-Networking/Assignments/05-Internet-Layer--Control-Plane/: 05-Internet-Layer--Control-Plane.md  dijkstra.py  distance-vector.py
(+2 files in other folders)
